hitting bomb = lose

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="websweeper.js"></script>
     </head>
     <body>
+        <h1>Web-Sweeper</h1>
         <div id="websweeper">
         </div>
     </body>
