--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <title>Web-Sweeper</title>
-        <link rel = "stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
         <script src="websweeper.js"></script>
     </head>
     <body>
         <h1>Web-Sweeper</h1>
-        <div id="websweeper">
-        </div>
+        <div id="websweeper"></div>
     </body>
 </html>
